testsuite/tests/typecheck/should_fail/T13311.stderr

T13311.hs:9:3: error:
    • Couldn't match expected type ‘IO a1’
                  with actual type ‘Maybe a0 -> Maybe b0’
    • Probable cause: ‘f’ is applied to too few arguments
      In a stmt of a 'do' block: f
      In the expression:
        do f
           putChar 'a'
      In an equation for ‘g’:
          g = do f
                 putChar 'a'
